add_executable(util_test util_test.cpp)
add_executable(vector_test vector_test.cpp)
add_executable(list_test list_test.cpp)
add_executable(stack_test stack_test.cpp)
add_executable(queue_test queue_test.cpp)
add_executable(bitmap_test bitmap_test.cpp)
add_executable(bintree_test bintree_test.cpp)
add_executable(bstree_test bstree_test.cpp)
add_executable(graph_test graph_test.cpp)
add_executable(avl_test avl_test.cpp)
add_executable(splay_test splay_test.cpp)
add_executable(btree_test btree_test.cpp)
add_executable(rbtree_test rbtree_test.cpp)
add_executable(skiplist_test skiplist_test.cpp)
add_executable(hashtable_test hashtable_test.cpp)
add_executable(prime_test prime_test.cpp)
add_executable(pq_test pq_test.cpp)
